1.2.1
-----
1. Better check/radio positioning.
2. Fix background painting with some toolbars.

1.2.0
-----
 1. Draw etch effect on radios if using a button effect, and not using button-like
    check/radios.
 2. If drawing square non-gtk style scrollviews, use a dark/light borders.
 3. If drawing square scrollviews, set frame width to 1 if using thin scrollbar
    groove.
 4. Add options to draw square progress and entry fields when rounding.
 5. Add option to control whether progressbars have a border on all sides, or just
    top/bottom.
 6. Add option to colour default buttons using highlight colour.
 7. Expand selected check/radio colour option so as to be able to specify colour.
 8. Add circular slider style.
 9. Add glow to mouse over of slider handles (not scrollbars).
10. Add option to draw stripes on scrollbar sliders.
11. Add a 'faded' style porgressbar stripe option.
12. Add option to draw agua shine on custom gradients.
13. Improve appearance of button style check and radio buttons.
14. Add option to control whether scrollbar groove has a border or not.
15. Dont use pixmaps to draw rounded slider, or radio buttons.
16. Add option to increase size of check/radios - default is now 15pixels.
    (For Mozilla apps, the old 13pixel size will be used).
17. Fix calculation of alpha values for square rings.
18. Fix progressbar glow central position.
19. Draw more frames.
20. Fix image/gradient background issues with wxWidgets applications. 
    (Use gtk_widget_translate_coordinates to translate widgets coordinates
     relative to window.)

1.1.1
-----
1. Alter alpha settings of square rings.
2. Fix progressbar glow sometimes disappearing with Firefox.

1.1.0
-----
1. Add option to not embolden progressbar text.
2. Add option to allow coloured mouse over for toolbar buttons.
3. Add option to border selection.
4. Add option to draw square rings on background.

1.0.2
-----
1. Apply cygwin patches from Yaakov S - use MODULE istead of SHARED.