@@ -991,6 +991,11 @@ static GdkColor * getParentBgCol(GtkWidget *widget)
                : NULL;
 }
 
+static gboolean eqRect(GdkRectangle *a, GdkRectangle *b)
+{
+    return a->x==b->x && a->y==b->y && a->width==b->width && a->height==b->height;
+}
+
 static void setLowerEtchCol(cairo_t *cr, GtkWidget *widget)
 {
     if(IS_FLAT(opts.bgndAppearance) && (!widget || !g_object_get_data(G_OBJECT (widget), "transparent-bg-hint")))
@@ -4811,11 +4816,14 @@ static void gtkDrawShadow(GtkStyle *style, GdkWindow *window, GtkStateType state
             if(GTK_SHADOW_NONE!=shadow_type &&
                (!frame || opts.drawStatusBarFrames || (!isMozilla() && GTK_APP_JAVA!=qtSettings.app)))
             {
-                gboolean doBorder=!viewport && !drawSquare;
+                gboolean doBorder=!viewport && !drawSquare,
+                         windowFrame=widget && widget->parent && !isFixedWidget(widget) &&
+                                     GTK_IS_FRAME(widget) && GTK_IS_WINDOW(widget->parent) &&
+                                     eqRect(&widget->allocation, &widget->parent->allocation);
 
-                if(!drawSquare && widget && widget->parent && !isFixedWidget(widget) &&
-                   GTK_IS_FRAME(widget) && GTK_IS_WINDOW(widget->parent))
-                    drawSquare=true;
+//                 if(!drawSquare && widget && widget->parent && !isFixedWidget(widget) &&
+//                    GTK_IS_FRAME(widget) && GTK_IS_WINDOW(widget->parent))
+//                     drawSquare=true;
 
                 if(scrolledWindow)
                 {
@@ -4843,13 +4851,13 @@ static void gtkDrawShadow(GtkStyle *style, GdkWindow *window, GtkStateType state
                         x++, y++, width-=2, height-=2;
                     }
                 }
-                if(viewport/* || drawSquare*/)
+                if(viewport || windowFrame/* || drawSquare*/)
                 {
                     cairo_new_path(cr);
                     cairo_rectangle(cr, x+0.5, y+0.5, width-1, height-1);
-//                     if(drawSquare)
-//                         cairo_set_source_rgb(cr, QTC_CAIRO_COL(qtcPalette.background[QT_STD_BORDER]));
-//                     else
+                    if(windowFrame)
+                        cairo_set_source_rgb(cr, QTC_CAIRO_COL(qtcPalette.background[QT_STD_BORDER]));
+                    else
                         cairo_set_source_rgb(cr, QTC_CAIRO_COL(qtcPalette.background[ORIGINAL_SHADE]));
                     cairo_stroke(cr);
                 }
