@@ -2,6 +2,7 @@
 -----
 1. Better check/radio positioning.
 2. Fix background painting with some toolbars.
+3. Draw window frames square.
 
 1.2.0
 -----
